--- a/style.css
+++ b/style.css
@@ -2,16 +2,19 @@
   background-color: #000;
   background-size: cover;
   background-image: url(carousel1.jpg);
+  height: 50vh;
 }
-  
+
 .bg-img2 {
   background-color: #000;
   background-size: cover;
   background-image: url(carousel2.jpg);
+  height: 50vh;
 }
 
 .bg-img3 {
   background-color: #000;
   background-size: cover;
   background-image: url(carousel3.jpg);
+  height: 50vh;
 }
